jsonata-native-fn/tests/ui/invalid-signature.rs
use jsonata_native_fn::jsonata;

#[jsonata("yyyy")]
fn test() {}

fn main() {}
